# aua-app/src/_assets/api.yml
@@ -282,9 +282,23 @@ paths:
       responses:
         200:
           description: OK
-  /doc_template/{id}/use:
+  /doc_template/{id}/apply:
     post:
-      operationId: useDocTemplate
+      operationId: applyDocTemplate
+      # security:
+      #   - authLoggedInUser: []
+      parameters:
+        - name: id
+          in: path
+          type: string
+          format: uuid
+          required: true
+      responses:
+        200:
+          description: OK
+  /doc_template/{id}/pdf:
+    post:
+      operationId: renderPdfFromDocTemplate
       # security:
       #   - authLoggedInUser: []
       parameters:
